Fix horizontal scroll in app list

--- a/Adara/cinnamon/cinnamon.css
+++ b/Adara/cinnamon/cinnamon.css
@@ -1218,7 +1218,7 @@ StEntry:pressed > StIcon,
 }
 
 .menu-applications-outer-box .menu-applications-inner-box {
-  padding: 0 8px;
+  margin: 0 8px;
 }
 
 .menu-applications-outer-box .menu-applications-scrollbox {
