--- a/Adara/cinnamon/scss/main/applets/_app-menu.scss
+++ b/Adara/cinnamon/scss/main/applets/_app-menu.scss
@@ -29,7 +29,7 @@
 	spacing: $padding-s;
 
 	.menu-applications-inner-box {
-		padding: 0 $padding-s;
+		margin: 0 $padding-s;
 	}
 
 	.menu-applications-scrollbox {
